// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render 1`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ ekBFnZ"
    value=""
  />
</DocumentFragment>
`;

exports[`Input render 1`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ ekBFnZ"
    value="value"
  />
</DocumentFragment>
`;
